# Geometric-Image-Synthesis

./: CMakeLists.txt  README.md  main.cpp
Logs/: 2022-13-06.md
Shapes/: Rectangle.cpp  Rectangle.h  RegularPolygon.cpp  RegularPolygon.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h
Strategies/: PointInPolygonStrategy.cpp  PointInPolygonStrategy.h
utility/: BoundingBox.cpp  BoundingBox.h  Point.h
